[gd_scene load_steps=6 format=2]

[ext_resource path="res://World_settings.gd" type="Script" id=1]
[ext_resource path="res://PeaberryBase.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://World_settings.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 2 )

[node name="World_settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 73.0
margin_top = 147.0
margin_right = 491.0
margin_bottom = 706.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 418.0
margin_bottom = 559.0

[node name="back_button" type="Button" parent="MarginContainer/VBoxContainer"]
margin_right = 418.0
margin_bottom = 26.0
custom_colors/font_color_hover = Color( 1, 0.960784, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Back"
flat = true
align = 0

[node name="explosion_time_random" type="CheckButton" parent="MarginContainer/VBoxContainer"]
margin_top = 30.0
margin_right = 418.0
margin_bottom = 70.0
custom_fonts/font = SubResource( 2 )
text = "Random time before explosion"

[node name="explosion_damage_random" type="CheckButton" parent="MarginContainer/VBoxContainer"]
margin_top = 74.0
margin_right = 418.0
margin_bottom = 114.0
custom_fonts/font = SubResource( 2 )
text = "Random explosion damage"

[connection signal="pressed" from="MarginContainer/VBoxContainer/back_button" to="." method="_on_back_button_pressed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/explosion_time_random" to="." method="_on_explosion_time_random_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/explosion_damage_random" to="." method="_on_explosion_damage_random_toggled"]
